src/objects/Informacion_comite__c.object
<CustomObject>
    <fields>
        <fullName>Ltv_sugerido__c</fullName>
        <formula>Credito_sugerido__c / Valor_total_del_Inmueble_Propuesto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ltv sugerido</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mes_Comite__c</fullName>
        <formula>IF( MONTH( Fecha_de_comite__c )=1,&quot;Enero&quot;,
IF( MONTH( Fecha_de_comite__c )=2,&quot;Febrero&quot;,
IF( MONTH( Fecha_de_comite__c )=3,&quot;Marzo&quot;,
IF( MONTH( Fecha_de_comite__c )=4,&quot;Abril&quot;,
IF( MONTH( Fecha_de_comite__c )=5,&quot;Mayo&quot;,
IF( MONTH( Fecha_de_comite__c )=6,&quot;Junio&quot;,
IF( MONTH( Fecha_de_comite__c )=7,&quot;Julio&quot;,
IF( MONTH( Fecha_de_comite__c )=8,&quot;Agosto&quot;,
IF( MONTH( Fecha_de_comite__c )=9,&quot;Septiembre&quot;,
IF( MONTH( Fecha_de_comite__c )=10,&quot;Octubre&quot;,
IF( MONTH( Fecha_de_comite__c )=11,&quot;Noviembre&quot;,&quot;Diciembre&quot;
)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mes_carta_definitiva__c</fullName>
        <formula>IF( MONTH( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )=1,&quot;Enero&quot;,
IF( MONTH( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )=2,&quot;Febrero&quot;,
IF( MONTH( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )=3,&quot;Marzo&quot;,
IF( MONTH( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )=4,&quot;Abril&quot;,
IF( MONTH( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )=5,&quot;Mayo&quot;,
IF( MONTH( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )=6,&quot;Junio&quot;,
IF( MONTH( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )=7,&quot;Julio&quot;,
IF( MONTH( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )=8,&quot;Agosto&quot;,
IF( MONTH( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )=9,&quot;Septiembre&quot;,
IF( MONTH( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )=10,&quot;Octubre&quot;,
IF( MONTH( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )=11,&quot;Noviembre&quot;,&quot;Diciembre&quot;
)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mes carta definitiva</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_de_creditos_vigentes__c</fullName>
        <label>N° de creditos vigentes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_de_creditos_vigentes_codeudor1__c</fullName>
        <label>N° de créditos vigentes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_de_creditos_vigentes_codeudor2__c</fullName>
        <label>N° de créditos vigentes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_de_creditos_vigentes_codeudor3__c</fullName>
        <label>N° de créditos vigentes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_de_tarjetas_vigentes__c</fullName>
        <label>N° de tarjetas vigentes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_de_tarjetas_vigentes_codeudor1__c</fullName>
        <label>N° de tarjetas vigentes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_de_tarjetas_vigentes_codeudor2__c</fullName>
        <label>N° de tarjetas vigentes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_de_tarjetas_vigentes_codeudor3__c</fullName>
        <label>N° de tarjetas vigentes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_acta__c</fullName>
        <label>No. acta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_consultas__c</fullName>
        <label>Número de consultas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_consultas_codeudor1__c</fullName>
        <label>Número de consultas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_consultas_codeudor2__c</fullName>
        <label>Número de consultas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_consultas_codeudor3__c</fullName>
        <label>Número de consultas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_codeudor_1__c</fullName>
        <formula>Solicitud_de_credito__r.Codeudor_1__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_codeudor_2__c</fullName>
        <formula>Solicitud_de_credito__r.Codeudor_2_N_mero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_codeudor_3__c</fullName>
        <formula>Solicitud_de_credito__r.Codeudor_3_N_mero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento_deudor__c</fullName>
        <formula>Solicitud_de_credito__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento deudor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_obligacion__c</fullName>
        <formula>Solicitud_de_credito__r.Oportunidad__r.Numero_de_obligacion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de obligación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ocupacion_codeudor_1__c</fullName>
        <label>Ocupación codeudor 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocupacion_codeudor_2__c</fullName>
        <label>Ocupación codeudor 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocupacion_codeudor_3__c</fullName>
        <label>Ocupación codeudor 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocupacion_deudor__c</fullName>
        <label>Ocupación deudor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empleado</fullName>
                </value>
                <value>
                    <fullName>Independiente</fullName>
                </value>
                <value>
                    <fullName>Empleado con negocio</fullName>
                </value>
                <value>
                    <fullName>Estudiante</fullName>
                </value>
                <value>
                    <fullName>Pensionado</fullName>
                </value>
                <value>
                    <fullName>Ama de casa</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Otros_creditos__c</fullName>
        <label>Otros créditos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paga_arriendo_cliente_deudor__c</fullName>
        <label>Paga arriendo cliente deudor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paga_arriendo_codeudor_1__c</fullName>
        <label>Paga arriendo codeudor 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paga_arriendo_codeudor_2__c</fullName>
        <label>Paga arriendo codeudor 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paga_arriendo_codeudor_3__c</fullName>
        <label>Paga arriendo codeudor 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <label>Plazo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plazo_propuesta__c</fullName>
        <label>Plazo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Precio_de_venta__c</fullName>
        <label>Precio de venta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Propietario_de_la_solicitud_de_credito__c</fullName>
        <formula>Solicitud_de_credito__r.Propietario__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario de la solicitud de credito</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proyecto__c</fullName>
        <label>Proyecto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radicacion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Radicación</label>
        <referenceTo>Radicacion_de_credito__c</referenceTo>
        <relationshipLabel>Información comité</relationshipLabel>
        <relationshipName>Informacion_comite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <formula>Solicitud_de_credito__r.Regional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relacion_cuota_ingreso__c</fullName>
        <formula>Valor_cuota_solicitada__c /  Ingresos_mes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relación cuota ingreso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Relacion_cuota_ingreso_migrado__c</fullName>
        <label>Relación cuota ingreso migrado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Relacion_cuota_ingreso_propuesta__c</fullName>
        <formula>Valor_cuota_sugerida__c / Ingresos_mes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relación cuota ingreso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_codeudor1__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_codeudor2__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_codeudor3__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sistema_de_amortizacion__c</fullName>
        <label>Sistema de amortización</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pesos</fullName>
                </value>
                <value>
                    <fullName>Uvr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sistema_de_amortizacion_propuesta__c</fullName>
        <label>Sistema de amortización</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pesos cuota fija</fullName>
                </value>
                <value>
                    <fullName>Pesos cuota fija con subsidio</fullName>
                </value>
                <value>
                    <fullName>Uvr cuota fija</fullName>
                </value>
                <value>
                    <fullName>Uvr cuota fija con subsidio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicitud_de_credito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitud de crédito</label>
        <referenceTo>Solicitud_de_credito__c</referenceTo>
        <relationshipLabel>Información comité</relationshipLabel>
        <relationshipName>Informacion_comite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subsidio__c</fullName>
        <label>Subsidio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subsidio_propuesta__c</fullName>
        <label>Subsidio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tipo_de_amortizacion__c</fullName>
        <label>Tipo de amortización</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pesos cuota fija</fullName>
                </value>
                <value>
                    <fullName>Pesos cuota fija con subsidio</fullName>
                </value>
                <value>
                    <fullName>Uvr cuota fija</fullName>
                </value>
                <value>
                    <fullName>Uvr cuota fija con subsidio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_independiente_C1__c</fullName>
        <label>Tipo de independiente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dueño de negocio RS</fullName>
                </value>
                <value>
                    <fullName>Dueño de negocio RC</fullName>
                </value>
                <value>
                    <fullName>Conductor</fullName>
                </value>
                <value>
                    <fullName>Rentista de Capital</fullName>
                </value>
                <value>
                    <fullName>Prestador de Servicio</fullName>
                </value>
                <value>
                    <fullName>Otros Independientes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_independiente_C2__c</fullName>
        <label>Tipo de independiente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dueño de negocio RS</fullName>
                </value>
                <value>
                    <fullName>Dueño de negocio RC</fullName>
                </value>
                <value>
                    <fullName>Conductor</fullName>
                </value>
                <value>
                    <fullName>Rentista de Capital</fullName>
                </value>
                <value>
                    <fullName>Prestador de Servicio</fullName>
                </value>
                <value>
                    <fullName>Otros Independientes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_independiente_C3__c</fullName>
        <label>Tipo de independiente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dueño de negocio RS</fullName>
                </value>
                <value>
                    <fullName>Dueño de negocio RC</fullName>
                </value>
                <value>
                    <fullName>Conductor</fullName>
                </value>
                <value>
                    <fullName>Rentista de Capital</fullName>
                </value>
                <value>
                    <fullName>Prestador de Servicio</fullName>
                </value>
                <value>
                    <fullName>Otros Independientes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_independiente__c</fullName>
        <label>Tipo de independiente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dueño de negocio RS</fullName>
                </value>
                <value>
                    <fullName>Dueño de negocio RC</fullName>
                </value>
                <value>
                    <fullName>Transportador (Dueño)</fullName>
                </value>
                <value>
                    <fullName>Conductor</fullName>
                </value>
                <value>
                    <fullName>Rentista de Capital</fullName>
                </value>
                <value>
                    <fullName>Prestador de Servicio</fullName>
                </value>
                <value>
                    <fullName>Otros Independientes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_inmueble__c</fullName>
        <label>Tipo de inmueble</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_proceso_informacion_comite__c</fullName>
        <label>Tipo de proceso</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nuevo</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
                <value>
                    <fullName>Carta definitiva</fullName>
                </value>
                <value>
                    <fullName>Aumento de monto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_producto__c</fullName>
        <formula>TEXT( Solicitud_de_credito__r.Oportunidad__r.Tipo_de_producto__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_riesgo__c</fullName>
        <label>Tipo de riesgo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_aprobado_previo__c</fullName>
        <label>Valor aprobado previo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cuota_solicitada__c</fullName>
        <formula>(Credito_solicitado__c /1000000)* Factor_por_millon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor cuota solicitada</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cuota_sugerida__c</fullName>
        <formula>( Credito_sugerido__c /1000000)* Factor_por_millon_propuesta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor cuota sugerida</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_cuota_sugerida_migrado__c</fullName>
        <label>Valor cuota sugerida migrado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_arriendo_cliente_deudor__c</fullName>
        <label>Valor del arriendo cliente deudor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_arriendo_codeudor_1__c</fullName>
        <label>Valor del arriendo codeudor 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_arriendo_codeudor_2__c</fullName>
        <label>Valor del arriendo codeudor 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_arriendo_codeudor_3__c</fullName>
        <label>Valor del arriendo codeudor 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito__c</fullName>
        <label>Valor del crédito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito_texto__c</fullName>
        <label>Valor del crédito texto</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_total_del_Inmueble_Propuesto__c</fullName>
        <formula>Credito_sugerido__c + Compromisos_de_pago__c + Cesantias_propuesta__c + Subsidio_propuesta__c+ Diferencia_Mejoramiento_Sugerido__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor total del Inmueble/Propuesto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_total_del_Inmueble__c</fullName>
        <formula>Credito_solicitado__c + Compromiso_de_pago__c + Ahorro_programado__c + Venta_inmueble__c + Otros_creditos__c + Credito_fondo_de_empleados__c + Cesantias__c + Subsidio__c+ Diferencia_Mejoramiento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor total del Inmueble</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venta_inmueble__c</fullName>
        <label>Venta inmueble</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vivienda__c</fullName>
        <label>Tipo de vivienda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIS</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>No VIS</fullName>
                </value>
                <value>
                    <fullName>VIPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vivienda_propuesta__c</fullName>
        <label>Vivienda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vis</fullName>
                </value>
                <value>
                    <fullName>Vip</fullName>
                </value>
                <value>
                    <fullName>No vis</fullName>
                </value>
                <value>
                    <fullName>Vipa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>C001_Valida_cliente_deudor</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Cliente_deudor__c )</errorConditionFormula>
        <errorDisplayField>Cliente_deudor__c</errorDisplayField>
        <errorMessage>C001-No modificar el cliente deudor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C002_Consecutivo_de_la_radicacion</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Radicacion__c )</errorConditionFormula>
        <errorDisplayField>Radicacion__c</errorDisplayField>
        <errorMessage>C002-No modificar el consecutivo de la radicación.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C003_Consecutivo_de_la_solicitud</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(  Solicitud_de_credito__c )</errorConditionFormula>
        <errorMessage>C003-No modificar el consecutivo de la solicitud.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C004_Valida_relacion_cuota_ingreso</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISPICKVAL(El_credito_fue__c ,&quot;Preaprobado&quot;),

Relacion_cuota_ingreso_propuesta__c &gt;= 0.3 


)</errorConditionFormula>
        <errorMessage>C004-La relación cuota ingreso es mayor ó igual al 30% , el crédito no pueder aprobado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C005_Valida_endeudamiento_financiero</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISPICKVAL(El_credito_fue__c ,&quot;Preaprobado&quot;),

Endeudamiento_financiero_propuesta__c &gt;= 0.5 

)</errorConditionFormula>
        <errorMessage>C005-El endeudamiento financiero  es mayor ó igual al 50% , el crédito no puede ser aprobado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C006_Valida_endeudamiento_financiero2</fullName>
        <active>true</active>
        <description>Valida endeudamiento financiero más cuota</description>
        <errorConditionFormula>AND(

ISPICKVAL(El_credito_fue__c ,&quot;Preaprobado&quot;),

Endeudamiento_financiero_cuota_propuesta__c  &gt;= 0.6 ,
Solicitud_de_credito__r.Migrado__c = FALSE


)</errorConditionFormula>
        <errorMessage>C006-El endeudamiento financiero más cuota  es mayor ó igual al 60% , el crédito no puede ser aprobado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C007_Valida_indice_cuota_ingreso_disponi</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISPICKVAL(El_credito_fue__c ,&quot;Preaprobado&quot;),

Ind_relacion_cuota_ingeso_neto_propuesta__c  &gt; 1 



)</errorConditionFormula>
        <errorMessage>C007-El indice relación cuota ingreso  es mayor ó igual al 100% , el crédito no puede ser aprobado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C008_Valida_LTV_sugerido</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

ISPICKVAL(El_credito_fue__c ,&quot;Preaprobado&quot;),

Ltv_sugerido__c &gt; 0.7 ,
Solicitud_de_credito__r.Migrado__c = FALSE


)</errorConditionFormula>
        <errorMessage>C008-El LTV sugerido es mayor ó igual  al 70% , el crédito no puede ser aprobado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C009_Valida_credito_solicitado</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

ISPICKVAL(El_credito_fue__c ,&quot;Preaprobado&quot;),

Credito_sugerido__c  &lt;  6894500 


)</errorConditionFormula>
        <errorDisplayField>Aprobado_con_programa_MI_CASA_YA__c</errorDisplayField>
        <errorMessage>C009-El crédito sugerido debe ser mayor a $6.894.500 , el crédito no puede ser aprobado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C010_Valida_score_del_cliente_deudor</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISPICKVAL(El_credito_fue__c ,&quot;Preaprobado&quot;),

Score__c  &lt; 200 


)</errorConditionFormula>
        <errorMessage>C010-El score del cliente deudor debe ser mayor de 200, el crédito no puede ser aprobado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C011_Valida_acierta_del_cliente_deudor</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(El_credito_fue__c ,&quot;Preaprobado&quot;) &amp;&amp;    Acierta__c  &lt;&gt; 0   &amp;&amp;   Acierta__c  &lt;&gt; 5 &amp;&amp;   Acierta__c  &lt;&gt; 7  &amp;&amp;   Acierta__c  &lt; 606</errorConditionFormula>
        <errorMessage>C011-El acierta del cliente deudor debe ser mayor de 606, el crédito no puede ser aprobado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C012_Valida_ingresos_mes_del_deudor</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
DATEVALUE(CreatedDate) &gt;= DATEVALUE(&quot;2017-01-01&quot;), 
ISPICKVAL(El_credito_fue__c ,&quot;Preaprobado&quot;),

OR(
Ingresos_mes__c &lt; 737717

))</errorConditionFormula>
        <errorMessage>C012-El ingreso mes del cliente deudor debe ser mayor de $737.717 , el crédito no puede ser aprobado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C013_Valida_antiguedad_en_meses</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISPICKVAL(El_credito_fue__c ,&quot;Preaprobado&quot;),

Antig_edad_en_meses__c  &lt;  3 


)</errorConditionFormula>
        <errorMessage>C013-La antigüedad laboral del cliente deudor debe ser mayor a 3 meses ,el crédito no puede ser aprobado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C014_Valida_el_plazo</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISPICKVAL(El_credito_fue__c ,&quot;Preaprobado&quot;),

OR(

Plazo_propuesta__c  &gt;  180,
Plazo_propuesta__c  &lt; 60

))</errorConditionFormula>
        <errorMessage>C014-El plazo debe estar entre 60 - 180, el crédito no puede ser aprobado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C015_Valida_causales_de_negacion</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL( El_credito_fue__c ,&quot;Negado&quot;), 

ISPICKVAL( Causal_de_negacion_INCO__c ,&quot;&quot;) 


)</errorConditionFormula>
        <errorMessage>C015- Si el crédito se encuentra negado, por favor diligenciar el causal de negación</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C016_Valida_credito_desistido</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISPICKVAL(  Credito_desistido__c   ,&quot;Si&quot;), 
ISBLANK( Fecha_de_desistido__c ) 


)</errorConditionFormula>
        <errorDisplayField>Fecha_de_desistido__c</errorDisplayField>
        <errorMessage>C016- Si el crédito está desistido, por favor diligenciar la fecha</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C017_Valida_credito_sugerido</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

ISPICKVAL(El_credito_fue__c ,&quot;Preaprobado&quot;),

Credito_solicitado__c  &lt; 6894500 


)</errorConditionFormula>
        <errorDisplayField>Aprobado_con_programa_MI_CASA_YA__c</errorDisplayField>
        <errorMessage>C017-El crédito solicitado debe ser mayor a $6.894.500 , el crédito no puede ser aprobado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C018_Valida_tipo_de_independiente</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 

ISPICKVAL(Ocupacion_deudor__c,&quot;Independiente&quot;), 

OR ( 
ISPICKVAL( Tipo_de_independiente__c , &quot;&quot;) 

))</errorConditionFormula>
        <errorMessage>C018- La ocupación es independiente por favor diligenciar el campo &quot; Tipo independiente&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C019_Valida_tipo_de_independiente</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 

Ocupacion_codeudor_1__c = &quot;Independiente&quot;, 


OR ( 
ISPICKVAL( Tipo_de_independiente_C1__c ,&quot; &quot;) 

))</errorConditionFormula>
        <errorMessage>C019- La ocupación es independiente por favor diligenciar el campo &quot; Tipo independiente&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>C020_Valida_tipo_de_independiente</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 

Ocupacion_codeudor_2__c =&quot;Independiente&quot;, 
Ocupacion_codeudor_2__c =&quot;INDEPENDIENTE&quot;, 

OR ( 
ISPICKVAL( Tipo_de_independiente_C2__c ,&quot;&quot;) 

))</errorConditionFormula>
        <errorMessage>C020- La ocupación es independiente por favor diligenciar el campo &quot; Tipo independiente&quot;</errorMessage>
    </validationRules>
</CustomObject>